--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,13 @@
     "name":"ChinaCalendar",
     "version":"2",
     "manifest_version":2,
-    "description":"中国农历日历",
+    "description":"中国农历📅",
     "icons":{
-        "48":"./icons/date(2).png",
-        "64":"./icons/date(2).png"
+        "48":"./icons/date.png",
+        "64":"./icons/date.png"
     },
-    "content_scripts":[
-        {
-            "matches":["http://*/*"],
-            "js":["js/main.js"]
-        }
-    ]
+    "browser_action":{
+        "default_title":"中国农历",
+        "default_popup":"calendar/index.html"
+    }
 }
